--- a/SignalR/Views/Home/Index.cshtml
+++ b/SignalR/Views/Home/Index.cshtml
@@ -3,6 +3,28 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    <h1 class="display-4">به سایت ما خوش آمدید</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+<div class="card" id="ChatBox">
+    <div class="card-header">
+        <b>پشتیبانی آنلاین</b>
+    </div>
+    <div id="MessagePanel">
+        <ul id="Messages"></ul>
+        <div id="SendNewMessage">
+            <form id="NewMessageForm" class="row">
+                <input id="MessageInput"
+                       class="form-control col-md-8 col-sm-8"
+                       placeholder="پیام خود را وارد کنید..." />
+                <button class="btn btn-success col-md-4 col-md-4">
+                    ارسال
+                </button>
+
+            </form>
+        </div>
+    </div>
+</div>
+
+
