--- a/SignalR/Views/Home/Index.cshtml
+++ b/SignalR/Views/Home/Index.cshtml
@@ -12,7 +12,9 @@
         <b>پشتیبانی آنلاین</b>
     </div>
     <div id="MessagePanel">
-        <ul id="Messages"></ul>
+        <ul id="Messages">
+
+        </ul>
         <div id="SendNewMessage">
             <form id="NewMessageForm" class="row">
                 <input id="MessageInput"
