--- a/SignalR/Views/Support/Index.cshtml
+++ b/SignalR/Views/Support/Index.cshtml
@@ -45,7 +45,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <form id="abswerForm" class="form-inline mt-2">
+                    <form id="answerForm" class="form-inline mt-2">
                         <input id="answerText" type="text" placeholder="پاسخ خود را بنویسید" class="form-control" />
                         <button type="submit" class="btn btn-success">ارسال پاسخ</button>
                     </form>
@@ -58,7 +58,6 @@
         </div>
     </div>
 
-</div>
 
 
 @section Scripts
